--- a/config.h.example
+++ b/config.h.example
@@ -1,6 +1,11 @@
 //Comment this if you don't want battery checking support.
 #define FEATURE_BATTERY
 
+//Comment this if you don't want RGBW support.
+//This support is provided by coryking's FastLED fork. https://github.com/coryking/FastLED
+//If you want to build with stock FastLED, you will have to comment this.
+#define FASTLED_RGBW
+
 
 //If you want to define a custom hardware type, change the LED_CONFIG macro.
 
